test_cases/positive/phantom_inputs.snek
ten = 10;
five = !ten Image("alpine:latest");
export DEFAULT = !(ten, five) Image("rust:latest");
