test_cases/negative/export_in_function.snek
def Foo() {
    export result = Image("rust:latest");
}

export DEFAULT = Foo();
